compiler/testData/diagnostics/tests/resolve/noCandidates/kt2787.kt
interface MutableMatrix<T> {
}

fun <T> toMutableMatrix(): MutableMatrix<T> {
    return <!RESOLUTION_TO_CLASSIFIER!>MutableMatrix<!><T>()
}
